# IDA-RPC

./: CMakeLists.txt  ida-plugin.json  readme.md
src/: discord_rpc_helper.cpp  ida_helper.cpp  ida_helper.hpp  plugin_mod.cpp
